--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -7,6 +7,8 @@
         <link href="{{MEDIA_URL}}css/colorbox.css" rel="stylesheet" type="text/css" media="all" title=""/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>        
         <script src="{{MEDIA_URL}}js/jquery.colorbox-min.js"></script>
+        <script src="{{MEDIA_URL}}js/table.exporting.js"></script>
+        <script type="text/javascript" src="{{MEDIA_URL}}js/jquery.cookie.js"></script>
         <script type="text/javascript">
             var flag = true;
             $(document).ready(function(){
