--- a/monitoreo/templates/simas/agua.html
+++ b/monitoreo/templates/simas/agua.html
@@ -51,8 +51,10 @@ Familia &raquo;  Subindicador Agua
 </div>
 
 <div id="grafo"></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
 
 <div class="contenido">
+ <div id="modalidad">
     <table width=500>
         <caption>Fuentes de agua</caption>
         <thead>
@@ -70,6 +72,7 @@ Familia &raquo;  Subindicador Agua
         </tr>
         {%endfor%}
     </table>
+ </div>
     <br>
     <br>
     <br>
