--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -84,7 +84,10 @@ Tierra &raquo; Existencia de árboles y Reforestación
 
 <div id="grafo"></div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table>
         <caption>Tabla Existencia de Arboles</caption>
         <thead>
@@ -146,6 +149,7 @@ Tierra &raquo; Existencia de árboles y Reforestación
             {%endfor%}
         <tbody>
     </table>
+</div>
 </div>
 
 {% endblock %}
