--- a/monitoreo/templates/simas/comunitario.html
+++ b/monitoreo/templates/simas/comunitario.html
@@ -55,7 +55,11 @@ Organización &raquo; Subindicador Organización Comunitaria
 </div>
 
 <div id="grafo"></div>
+
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
 <table width=500>
         <caption>¿Cuántas organizaciones están activas en la localidad o comunidad?</caption>
         <thead>
@@ -113,5 +117,6 @@ Organización &raquo; Subindicador Organización Comunitaria
 
     <br>
     <br>
+</div>
 </div>
 {% endblock %}
