--- a/monitoreo/templates/simas/gremial.html
+++ b/monitoreo/templates/simas/gremial.html
@@ -54,7 +54,11 @@ Organización &raquo; Subindicador Organización Gremial
         <a id="grafico3" href="#" onCLick="click_callback('estructura')">Interesado en asumir cargo?</a>
     </div>
     <div id="grafo"></div>
+
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table width=500>
         <caption>Es socio/a de organización Gremial</caption>
         <thead>
@@ -192,6 +196,7 @@ Organización &raquo; Subindicador Organización Gremial
        
        </tbody>
     </table>
+</div>
         <br>
     <br>
 </div>
