--- a/monitoreo/templates/simas/manejo_suelo.html
+++ b/monitoreo/templates/simas/manejo_suelo.html
@@ -65,7 +65,10 @@ Suelo &raquo; Subindicador Manejo del Suelo
 
 <div id="grafo"></div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table width=500>
         <caption>¿Cómo preparan sus terrenos?</caption>
         <thead>
@@ -145,6 +148,6 @@ Suelo &raquo; Subindicador Manejo del Suelo
             {%endfor%}
         </tbody>
     </table>
-
+</div>
 </div>
 {% endblock %}
