--- a/monitoreo/templates/simas/seguridad.html
+++ b/monitoreo/templates/simas/seguridad.html
@@ -479,6 +479,9 @@ Seguridad alimentaria
         <div id="container4"></div>
 </div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
+<div id="modalidad">
 <table style="width:100%;">
     <caption>Alimentos que contienen carbohidrátos</caption>
         <thead>
@@ -617,7 +620,8 @@ Seguridad alimentaria
             </tr>
             {%endfor%}
         </tbody>
-    </table> 
+    </table>
+</div> 
 <div class="contenedor">
         <div class="grafico-title"></div>
         <div id="container3"></div>
