--- a/monitoreo/templates/simas/animales.html
+++ b/monitoreo/templates/simas/animales.html
@@ -11,7 +11,10 @@ Subindicador animales
      {% include "simas/menu.html" %}
 </div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table>
         <caption>Los Animales</caption>
         <thead>
@@ -65,6 +68,7 @@ Subindicador animales
             {%endfor%}
         </tbody>
     </table>
+</div>
 </div>
 
 {% endblock %}
