--- a/monitoreo/templates/simas/equipos.html
+++ b/monitoreo/templates/simas/equipos.html
@@ -91,8 +91,10 @@ Bienes
             <a id="grafico6" href="#" onCLick="click_callback('lavadero')">Lavadero</a>
         </div>
     <div id="grafo"></div>
-    
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+ <div id="modalidad">   
+    <table>
         <caption>Los Equipos</caption>
         <thead>
             <tr>
@@ -116,7 +118,7 @@ Bienes
         </tbody>
     </table>
 
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Las Infraestructuras</caption>
         <thead>
             <tr>
@@ -140,7 +142,7 @@ Bienes
         </tbody>
     </table>
 
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Las Herramientas</caption>
         <thead>
             <tr>
@@ -164,7 +166,7 @@ Bienes
         </tbody>
     </table>
 
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Los Transportes</caption>
         <thead>
             <tr>
@@ -187,6 +189,7 @@ Bienes
             {%endfor%}
         <tbody>
     </table>
+</div>
 </div>
 <script>
     // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
