--- a/monitoreo/templates/simas/fincas.html
+++ b/monitoreo/templates/simas/fincas.html
@@ -190,7 +190,10 @@ function Grafo5(){
 
 <div id="grafo"></div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table>
         <caption>Uso de Tierra</caption>
         <thead>
@@ -275,6 +278,7 @@ function Grafo5(){
             </tr>
         </tbody>
     </table>
+</div>
 </div>
 <div id="container" style="height:410px; width: 800px; margin: 0 auto; clear:both"></div>
 
