--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -253,6 +253,10 @@ function Grafo10(){
         </div>
     </div>
     <div id="grafo" style="width:670px;"></div>
+
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
+<div id="modalidad">
      <table id="sortTableExample" class="tablesorter">
         <caption>Agroforestales</caption>
         <thead>
@@ -585,6 +589,7 @@ function Grafo10(){
             <th>{{respuesta.total_neto|intcomma}}</th>
         </tr>
     </table><br><br>
+</div>
     </div>
 <script type="text/javascript">
   $(function() {
