--- a/monitoreo/templates/simas/luz.html
+++ b/monitoreo/templates/simas/luz.html
@@ -21,7 +21,10 @@ Familia &raquo;  Subindicador Energia
     {% include "simas/menu.html" %}
 </div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table width=500>
         <caption>Fuentes de Energía</caption>
         <thead>
@@ -41,5 +44,6 @@ Familia &raquo;  Subindicador Energia
             {%endfor%}
         <tbody>
     </table>
+</div>
 </div>
 {% endblock %}
