--- a/monitoreo/templates/simas/manejo_agro.html
+++ b/monitoreo/templates/simas/manejo_agro.html
@@ -10,7 +10,10 @@ Opciones de Manejo Agroecológico
      {% include "simas/menu.html" %}
 </div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table>
         <caption>Nivel de conocimiento</caption>
         <thead>
@@ -70,6 +73,7 @@ Opciones de Manejo Agroecológico
             {%endfor%}
         </tbody>
     </table>
+</div>
     <br></br><br></br>
 </div>
 {% endblock %}
