--- a/monitoreo/templates/simas/mitigacion.html
+++ b/monitoreo/templates/simas/mitigacion.html
@@ -86,7 +86,10 @@ Subindicador Mitigación de Riesgos
     {% include "simas/menu.html" %}
 </div>
 
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table style="width:100%;">
         <caption>Mitigación de los Riesgos</caption>
         <thead>
@@ -106,6 +109,7 @@ Subindicador Mitigación de Riesgos
             {%endfor%}
         </tbody>
     </table>
+</div>
 <div class="contenedor">
         <div class="grafico-title"></div>
         <div id="container"></div>
