--- a/monitoreo/templates/simas/fincas.html
+++ b/monitoreo/templates/simas/fincas.html
@@ -115,6 +115,7 @@ function Grafo5(){
             text: ''
         },
         xAxis: {
+            max: 0,
             categories: [
                 'Opciones'
             ]
@@ -194,7 +195,6 @@ function Grafo5(){
 
 <div class="contenido">
 <div id="modalidad">
-
     <table>
         <caption>Uso de Tierra</caption>
         <thead>
