agregando el random

--- a/monitoreo/templates/simas/menu.html
+++ b/monitoreo/templates/simas/menu.html
@@ -1,7 +1,7 @@
 <div id="indicadores">    
 <div id="seleccionindicador">Seleccione el Indicador</div>
     <div id="contenedor_indicadores">
-        <a href="/educacion" class="button">Familias</a>
+        <a href="/educacion?v={{request.session.crce}}" class="button">Familias</a>
         <a href="/gremial" class="button">Organización</a>
         <a href="/fincas" class="button">Tierra</a>
         <a href="/animales"class="button">Ánimales</a>
