--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
+
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Expires" content="0">
+
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{%block title%}Sistema de Informaci&oacute;n Monitoreo Zona Alta y Seca{%endblock%}</title>
         <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="all" title=""/>
