agregando el random a los sitios

--- a/monitoreo/templates/nav_familia.html
+++ b/monitoreo/templates/nav_familia.html
@@ -1,6 +1,6 @@
 <div id="contenedor_igual">
-    <a href="/educacion" class="educacion">Educación</a>
-    <a href="/salud" class="salud">Salud</a>
-    <a href="/luz"class="luz">Energia</a>
-    <a href="/agua"class="agua">Agua de consumo</a>
+    <a href="/educacion?v={{request.session.crce}}" class="educacion">Educación</a>
+    <a href="/salud?v={{request.session.crce}}" class="salud">Salud</a>
+    <a href="/luz?v={{request.session.crce}}"class="luz">Energia</a>
+    <a href="/agua?v={{request.session.crce}}"class="agua">Agua de consumo</a>
 </div>
