--- a/monitoreo/templates/nav_org.html
+++ b/monitoreo/templates/nav_org.html
@@ -1,5 +1,5 @@
 <div id="contenedor_igual">
-  <a href="/gremial" class="gremial">Gremial</a>
-  <a href="/comunitario" class="comunitario">Comunitaria</a>
+  <a href="/gremial?v={{request.session.crce}}" class="gremial">Gremial</a>
+  <a href="/comunitario?v={{request.session.crce}}" class="comunitario">Comunitaria</a>
 </div>
 
