--- a/monitoreo/templates/nav_riesgos.html
+++ b/monitoreo/templates/nav_riesgos.html
@@ -1,4 +1,4 @@
 <div id="contenedor_igual">
-  <a href="/vulnerable" class="vulnerable">Vulnerabilidad de la finca</a>
-  <a href="/mitigariesgos" class="mitigariesgos">Mitigación de riesgos</a>
+  <a href="/vulnerable?v={{request.session.crce}}" class="vulnerable">Vulnerabilidad de la finca</a>
+  <a href="/mitigariesgos?v={{request.session.crce}}" class="mitigariesgos">Mitigación de riesgos</a>
 </div>
