--- a/monitoreo/templates/nav_suelo.html
+++ b/monitoreo/templates/nav_suelo.html
@@ -1,4 +1,4 @@
 <div id="contenedor_igual">
-  <a href="/suelos" class="suelo">Carácteristicas del terreno</a>
-  <a href="/manejosuelo" class="manejosuelo">Manejo del suelo</a>
+  <a href="/suelos?v={{request.session.crce}}" class="suelo">Carácteristicas del terreno</a>
+  <a href="/manejosuelo?v={{request.session.crce}}" class="manejosuelo">Manejo del suelo</a>
 </div>
