--- a/monitoreo/templates/nav_tierra.html
+++ b/monitoreo/templates/nav_tierra.html
@@ -1,4 +1,4 @@
 <div id="contenedor_igual">
-    <a href="/fincas" class="tierra">Uso de tierra</a>
-    <a href="/arboles" class="arboles">Existencia de árboles y Reforestación</a>
+    <a href="/fincas?v={{request.session.crce}}" class="tierra">Uso de tierra</a>
+    <a href="/arboles?v={{request.session.crce}}" class="arboles">Existencia de árboles y Reforestación</a>
 </div>
