--- a/monitoreo/templates/simas/menu.html
+++ b/monitoreo/templates/simas/menu.html
@@ -2,17 +2,17 @@
 <div id="seleccionindicador">Seleccione el Indicador</div>
     <div id="contenedor_indicadores">
         <a href="/educacion?v={{request.session.crce}}" class="button">Familias</a>
-        <a href="/gremial" class="button">Organización</a>
-        <a href="/fincas" class="button">Tierra</a>
-        <a href="/animales"class="button">Ánimales</a>
-        <a href="/cultivos"class="button">Cultivos</a>
-        <a href="/opcionesmanejo"class="button">Opciones de manejo</a>
-        <a href="/usosemilla"class="button">Uso de semilla</a>
-        <a href="/suelos"class="button">Suelo</a>
-        <a href="/ingresos" class="button">Ingresos</a>
-        <a href="/equipos" class="button">Bienes</a>
-        <a href="/ahorro_credito" class="button">Ahorro y crédito</a>
-        <a href="/seguridad" class="button">Seguridad alimentaria</a>
-        <a href="/vulnerable" class="button">Riesgos</a>
+        <a href="/gremial?v={{request.session.crce}}" class="button">Organización</a>
+        <a href="/fincas?v={{request.session.crce}}" class="button">Tierra</a>
+        <a href="/animales?v={{request.session.crce}}"class="button">Ánimales</a>
+        <a href="/cultivos?v={{request.session.crce}}"class="button">Cultivos</a>
+        <a href="/opcionesmanejo?v={{request.session.crce}}"class="button">Opciones de manejo</a>
+        <a href="/usosemilla?v={{request.session.crce}}"class="button">Uso de semilla</a>
+        <a href="/suelos?v={{request.session.crce}}"class="button">Suelo</a>
+        <a href="/ingresos?v={{request.session.crce}}" class="button">Ingresos</a>
+        <a href="/equipos?v={{request.session.crce}}" class="button">Bienes</a>
+        <a href="/ahorro_credito?v={{request.session.crce}}" class="button">Ahorro y crédito</a>
+        <a href="/seguridad?v={{request.session.crce}}" class="button">Seguridad alimentaria</a>
+        <a href="/vulnerable?v={{request.session.crce}}" class="button">Riesgos</a>
     </div>
 </div>
