--- a/monitoreo/templates/simas/spss.html
+++ b/monitoreo/templates/simas/spss.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>{% block title %}Hoja spss para Educacion {% endblock %}</title>
+</head>
+<body>
 {% block contenido %}
     <table>
         <tr>
@@ -299,5 +305,5 @@
 
 </table>
 {% endblock contenido %}
-
- 
+</body>
+</html>
