--- a/monitoreo/templates/simas/agua.html
+++ b/monitoreo/templates/simas/agua.html
@@ -51,7 +51,10 @@ Familia &raquo;  Subindicador Agua
 </div>
 
 <div id="grafo"></div>
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>
+<a class="exportar2" href="/exportar/5/"></a>    
+</div>
+
 
 <div class="contenido">
  <div id="modalidad">
