--- a/monitoreo/templates/simas/ahorro_credito.html
+++ b/monitoreo/templates/simas/ahorro_credito.html
@@ -64,7 +64,7 @@ Ahorro y Credito
     
 <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/24/"></a> </div>
 
 <div class="contenido">
 <div id="modalidad">
