--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -84,12 +84,12 @@ Tierra &raquo; Existencia de árboles y Reforestación
 
 <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> </div>
 
 <div class="contenido">
 <div id="modalidad">
     <table>
-        <caption>Tabla Existencia de Arboles</caption>
+        <caption>Tabla Existencia de Arboles <a class="exportar2" href="/exportar/9/"></a></caption>
         <thead>
             <tr>
                 <th>TIPO</th>
@@ -127,7 +127,7 @@ Tierra &raquo; Existencia de árboles y Reforestación
     </table>
     <br>
     <table>
-        <caption>Reforestación en ultimo año</caption>
+        <caption>Reforestación en ultimo año <a class="exportar2" href="/exportar/10/"></a></caption>
         <thead>
             <tr>
                 <th>Actividad</th>
