--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -254,7 +254,7 @@ function Grafo10(){
     </div>
     <div id="grafo" style="width:670px;"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/17/"></a></div>
 
 <div id="modalidad">
      <table id="sortTableExample" class="tablesorter">
@@ -541,7 +541,7 @@ function Grafo10(){
         <th>Ingreso agropecuario: {{respuesta.ingreso|intcomma}}</th>
     </table>
 
-    <br><div class="subindicador">INGRESO  &raquo; Los Otros Ingresos familiares <a href="#" class="exportar"></a></div><br>
+    <br><div class="subindicador">INGRESO  &raquo; Los Otros Ingresos familiares <a href="#" class="exportar"></a> <a class="exportar2" href="/exportar/18/"></a></div><br>
     <table id="sortTableExample" class="tablesorter">
         <caption></caption>
         <thead>
