--- a/monitoreo/templates/simas/manejo_suelo.html
+++ b/monitoreo/templates/simas/manejo_suelo.html
@@ -65,7 +65,7 @@ Suelo &raquo; Subindicador Manejo del Suelo
 
 <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> <a class="exportar2" href="/exportar/16/"></a></div>
 
 <div class="contenido">
 <div id="modalidad">
