--- a/monitoreo/templates/simas/suelos.html
+++ b/monitoreo/templates/simas/suelos.html
@@ -17,7 +17,7 @@ Suelo &raquo; Subindicador Caracterización del Terrreno
     {% include "simas/menu.html" %}
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/15/"></a></div>
 
 <div class="contenido">
 <div id="modalidad">
