--- a/monitoreo/templates/simas/manejo_agro.html
+++ b/monitoreo/templates/simas/manejo_agro.html
@@ -10,7 +10,7 @@ Opciones de Manejo Agroecológico
      {% include "simas/menu.html" %}
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> <a class="exportar2" href="/exportar/13/"></a></div>
 
 <div class="contenido">
 <div id="modalidad">
