--- a/monitoreo/templates/simas/semilla.html
+++ b/monitoreo/templates/simas/semilla.html
@@ -9,7 +9,7 @@ Uso de Semilla
      {% include "simas/menu.html" %}
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/14/"></a></div>
 
 <div class="contenido">
 <div id="modalidad">   
