--- a/monitoreo/templates/simas/seguridad.html
+++ b/monitoreo/templates/simas/seguridad.html
@@ -479,7 +479,7 @@ Seguridad alimentaria
         <div id="container4"></div>
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/26/"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/26/"></a>{%endif%}</div>
 
 <div id="modalidad">
 <table style="width:100%;">
