--- a/monitoreo/templates/simas/agua.html
+++ b/monitoreo/templates/simas/agua.html
@@ -52,7 +52,9 @@ Familia &raquo;  Subindicador Agua
 
 <div id="grafo"></div>
 <div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>
-<a class="exportar2" href="/exportar/5/"></a>    
+    {% if request.user.is_authenticated %}
+        <a class="exportar2" href="/exportar/5/"></a> 
+    {% endif %}
 </div>
 
 
