--- a/monitoreo/templates/simas/comunitario.html
+++ b/monitoreo/templates/simas/comunitario.html
@@ -56,7 +56,7 @@ Organización &raquo; Subindicador Organización Comunitaria
 
 <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/7/"></a> </div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/7/"></a>{%endif%} </div>
 
 <div class="contenido">
 <div id="modalidad">
