--- a/monitoreo/templates/simas/educacion.html
+++ b/monitoreo/templates/simas/educacion.html
@@ -155,7 +155,7 @@ Familia &raquo; Subindicador Educación
     {% include "simas/menu.html" %}
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/1/"></a> </div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/1/"></a>{%endif%} </div>
 
 <div class="contenido">
 <div id="modalidad">
