--- a/monitoreo/templates/simas/equipos.html
+++ b/monitoreo/templates/simas/equipos.html
@@ -92,7 +92,7 @@ Bienes
         </div>
     <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/21/"></a> </div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/21/"></a>{%endif%} </div>
  <div id="modalidad">   
     <table>
         <caption>Los Equipos</caption>
@@ -143,7 +143,7 @@ Bienes
     </table>
 
     <table>
-        <caption>Las Herramientas <a class="exportar2" href="/exportar/22/"></a> </caption>
+        <caption>Las Herramientas {% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/22/"></a>{%endif%} </caption>
         <thead>
             <tr>
                 <th>HERRAMIENTAS</th>
@@ -167,7 +167,7 @@ Bienes
     </table>
 
     <table>
-        <caption>Los Transportes <a class="exportar2" href="/exportar/23/"></a> </caption>
+        <caption>Los Transportes {% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/23/"></a>{%endif%} </caption>
         <thead>
             <tr>
                 <th>TRANSPORTE</th>
