--- a/monitoreo/templates/simas/fincas.html
+++ b/monitoreo/templates/simas/fincas.html
@@ -191,7 +191,7 @@ function Grafo5(){
 
 <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/8/"></a> </div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/8/"></a>{%endif%} </div>
 
 <div class="contenido">
 <div id="modalidad">
