--- a/monitoreo/templates/simas/gremial.html
+++ b/monitoreo/templates/simas/gremial.html
@@ -55,7 +55,7 @@ Organización &raquo; Subindicador Organización Gremial
     </div>
     <div id="grafo"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/6/"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/6/"></a>{%endif%}</div>
 
 <div class="contenido">
 <div id="modalidad">
