--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -254,7 +254,7 @@ function Grafo10(){
     </div>
     <div id="grafo" style="width:670px;"></div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a><a class="exportar2" href="/exportar/17/"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a>{% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/17/"></a>{%endif%}</div>
 
 <div id="modalidad">
      <table id="sortTableExample" class="tablesorter">
