--- a/monitoreo/templates/simas/luz.html
+++ b/monitoreo/templates/simas/luz.html
@@ -21,7 +21,7 @@ Familia &raquo;  Subindicador Energia
     {% include "simas/menu.html" %}
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> <a class="exportar2" href="/exportar/3/"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> {% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/3/"></a>{%endif%}</div>
 
 <div class="contenido">
 <div id="modalidad">
