--- a/monitoreo/templates/simas/mitigacion.html
+++ b/monitoreo/templates/simas/mitigacion.html
@@ -86,7 +86,7 @@ Subindicador Mitigación de Riesgos
     {% include "simas/menu.html" %}
 </div>
 
-<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> <a class="exportar2" href="/exportar/28/"></a></div>
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a> {% if request.user.is_authenticated %}<a class="exportar2" href="/exportar/28/"></a>{%endif%}</div>
 
 <div class="contenido">
 <div id="modalidad">
